# organization_service

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yaml
app/: Dockerfile  alembic.ini  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 2026_02_04_2316-fcf5153533fb_.py
app/scripts/: entrypoint.sh
app/src/: config.py  ioc.py  lifespan.py  main.py  routers.py  test_data.py
app/src/application/: mappers.py
app/src/application/dto/: activities.py  base.py  buildings.py  orgs.py
app/src/application/interactors/: activities.py  building.py  orgs.py
app/src/application/interfaces/: db_mapper.py  db_repository.py  exception.py  mapper.py
app/src/domain/: agregates.py  assigments.py  exceptions.py  value_objects.py
app/src/domain/entities/: activities.py  base.py  buildings.py  orgs.py
app/src/flows/: activities.py  buildings.py
app/src/infra/resouces/database/: __init__.py  events.py  manager.py  types.py
app/src/infra/resouces/database/mappers/: activities.py  buildings.py  orgs.py
app/src/infra/resouces/database/models/: __init__.py  activities.py  base.py  buildings.py  m2m.py  organizations.py
app/src/infra/resouces/database/models/mixins/: __init__.py  data.py  pk.py
app/src/infra/resouces/database/repos/: uow.py
app/src/infra/resouces/database/repos/activities/: __init__.py  activity.py
app/src/infra/resouces/database/repos/buildings/: __init__.py  building.py
app/src/infra/resouces/database/repos/orgs/: __init__.py  org.py
app/src/presentation/api/: authentication.py  error_handlers.py
app/src/presentation/api/v1/: __init__.py
app/src/presentation/api/v1/handlers/: activities.py  buildings.py  orgs.py
app/src/presentation/api/v1/mappers/: activities.py  buildings.py  orgs.py
app/src/presentation/api/v1/schemas/: activities.py  buildings.py  orgs.py
envs/docker/: app.env.template
envs/local/: app.env.template
